Tue Apr 12 02:21:55 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c (ip_finalize): add existence check of
	  Tcl commands before calling Tcl_GlobalEval(). 

Mon Apr 11 23:36:04 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.r: [druby-ja:123] fix: When reference of my object is 
	  loaded, the object is tainted.

	* test/drb/test_drb.rb: ditto.

Mon Apr 11 22:18:23 2005  WATANABE Hirofumi  <eban@ruby-lang.org>

	* dir.c, file.c (lstat): avoid warnings for mingw.

Mon Apr 11 20:11:06 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c (ip_finalize): adhoc patch to avoid SEGV when exit
	  on Tcl/Tk8.3.x.

Mon Apr 11 15:24:20 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (configuration): shouldn't output hdrdir twice.

Sat Apr  9 18:20:31 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/image.rb: support to create TkImage object without
	  creating a new image object on Tk.

	* ext/tk/lib/tk/menu.rb: use TkCommandNames on create_self()

	* ext/tk/lib/tk/root.rb: TkRoot.to_eval() returns '.'.

	* ext/tk/lib/tk/text.rb: add methods to create a TkText::IndexString
	  from (x, y) coords.

	* ext/tk/lib/tkextlib/tile/: add demo and update support status.

Sat Apr  9 14:42:29 2005  Kouhei Sutou  <kou@cozmixng.org>

	* sample/rss/tdiary_plugin/rss-recent.rb: supported configuration
	  via Web browser.

Fri Apr  8 20:17:48 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): hdrdir needs to be defined also in
	  Config::CONFIG.

	* lib/mkmf.rb (configuration, create_makefile): get rid of recursive
	  macro reference.

Fri Apr  8 01:55:20 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/sample/demos-{en,jp}/goldberg.rb: reduced window size.
	  [ruby-dev:25992]

Thu Apr  7 23:58:40 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): keep directory names in Makefile as macros.

	* lib/mkmf.rb (configuration, create_makefile): ditto.
